--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html lang="en">
 <head>
-<title>Virtual Machine 1</title>
+<title>Container - US</title>
 </head>
 <body>
 <div align="center" style="font-size:10;font:Calibri">
 <br>
-<img src="meme.jpg"></img>
+<img src="img/meme-us.jpg"></img>
 <br>
 <br>
 <br>
